Bug 460365 - No source is selected in 'Sources' dropdown when I open Discover via 'Get <app>..." search result from kickoff or krunner
Summary: No source is selected in 'Sources' dropdown when I open Discover via 'Get <ap...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-13 13:43 UTC by Patrick Silva
Modified: 2022-10-20 14:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.2
Sentry Crash Report:


Attachments
screenshot (194.30 KB, image/png)
2022-10-13 13:43 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-10-13 13:43:36 UTC
Created attachment 152770 [details]
screenshot

STEPS TO REPRODUCE
1. use kickoff or krunner to search for an app that is not installed on your system
2. click on  'Get <app>..." search result - Discover opens
3. click on 'Sources' in the upper right corner

OBSERVED RESULT
No source is selected. Please see the attached screenshot.

EXPECTED RESULT
default source (Arch repos, in my case) should be selected

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.0
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2022-10-14 15:19:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/388
Comment 2 Aleix Pol 2022-10-18 16:56:27 UTC
Git commit 79d368efeb83a875aa141253457a944d0352f77d by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 18/10/2022 at 16:54.
Pushed by apol into branch 'master'.

flatpak: make sure we look up the correct resource

We are using the appstream id as the app identifier, not the flatpak's.
This makes sure we don't create two very-similar-but-not-quite
resources.

M  +9    -6    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://invent.kde.org/plasma/discover/commit/79d368efeb83a875aa141253457a944d0352f77d
Comment 3 Aleix Pol 2022-10-18 16:57:53 UTC
Git commit 4fb75399665274d027e5fb0b4a0202544fc55dfc by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 18/10/2022 at 16:57.
Pushed by apol into branch 'Plasma/5.26'.

flatpak: make sure we look up the correct resource

We are using the appstream id as the app identifier, not the flatpak's.
This makes sure we don't create two very-similar-but-not-quite
resources.


(cherry picked from commit 79d368efeb83a875aa141253457a944d0352f77d)

M  +9    -6    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://invent.kde.org/plasma/discover/commit/4fb75399665274d027e5fb0b4a0202544fc55dfc
Comment 4 Patrick Silva 2022-10-20 14:44:24 UTC
This bug persists on Plasma 5.26.1.

Operating System: Arch Linux
KDE Plasma Version: 5.26.1
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 5 Nate Graham 2022-10-20 14:50:54 UTC
Apologies, this barely missed 5.26.1 and the fix will be in 5.26.2. You can see it's not in the changelog at https://kde.org/announcements/changelogs/plasma/5/5.26.0-5.26.1.