flatpak: make sure we look up the correct resource

We are using the appstream id as the app identifier, not the flatpak's.
This makes sure we don't create two very-similar-but-not-quite
resources.

BUG: 460365


(cherry picked from commit 79d368efeb83a875aa141253457a944d0352f77d)